// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavItem /> should render correctly NavItem type BUTTOM 1`] = `
<li
  className="nav_item"
>
  <ModalLink
    activeClassName="navigation_active"
    className="nav_button test  "
    to="/"
    type="button"
  >
    ExampleText
  </ModalLink>
</li>
`;

exports[`<NavItem /> should render correctly NavItem type LINK 1`] = `
<li
  className="nav_item"
>
  <NavLink
    activeClassName="navigation_active"
    className="nav_link test  "
    exact={false}
    to="/"
    type="link"
  >
    ExampleText
  </NavLink>
</li>
`;
